--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "type": "module",
  "scripts": {
-  "start": "tsx src/app.ts",
+  "start": "tsx watch src/app.ts",
   "startf": "vite",
   "lint": "eslint --fix web/",
   "front-build": "vite build",
@@ -13,7 +13,9 @@
   "build": "tsc",
   "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
   "copyfiles": "node src/scripts/copyfiles.js",
-  "seed": "tsx src/scripts/seed.ts"
+  "monitor": "node src/scripts/monitor.js",
+  "seed": "tsx src/scripts/seed.ts",
+  "poll": "tsx src/scripts/polling/poll.ts"
  },
  "keywords": [],
  "author": "",
@@ -59,7 +61,6 @@
   "@types/body-parser": "^1.19.5",
   "@vitejs/plugin-vue": "^5.0.5",
   "autoprefixer": "^10.4.19",
-  "clipboardy": "^4.0.0",
   "cookie-parser": "^1.4.6",
   "cors": "^2.8.5",
   "daisyui": "^4.12.10",
@@ -71,10 +72,12 @@
   "ignore": "^5.3.2",
   "jsonwebtoken": "^9.0.2",
   "laravel-vite-plugin": "^1.0.4",
+  "modbus-serial": "^8.0.17",
   "mysql2": "^3.11.0",
   "postcss": "^8.4.41",
   "postcss-import": "^16.1.0",
   "prettier": "^3.3.2",
+  "prompt-sync": "^4.2.0",
   "reflect-metadata": "^0.2.2",
   "tailwindcss": "^3.4.10",
   "tsx": "^4.17.0",
