--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "frontend"],
+  "include": ["src/**/*", "frontend", "src/scripts/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
