--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "copyfiles": "node src/scripts/copyfiles.js",
   "monitor": "node src/scripts/monitor.js",
   "seed": "tsx src/scripts/seed.ts",
+  "seedwork": "tsx src/scripts/seedwork.ts",
   "poll": "tsx src/scripts/polling/poll.ts"
  },
  "keywords": [],
@@ -59,11 +60,15 @@
   "@tailwindcss/forms": "^0.5.7",
   "@tailwindcss/typography": "^0.5.13",
   "@types/body-parser": "^1.19.5",
+  "@types/chart.js": "^2.9.41",
   "@vitejs/plugin-vue": "^5.0.5",
   "autoprefixer": "^10.4.19",
+  "chart.js": "^4.4.4",
+  "chartjs-adapter-date-fns": "^3.0.0",
   "cookie-parser": "^1.4.6",
   "cors": "^2.8.5",
   "daisyui": "^4.12.10",
+  "date-fns": "^3.6.0",
   "dotenv": "^16.4.5",
   "eslint-config-prettier": "^9.1.0",
   "eslint-plugin-vue": "^9.27.0",
