--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "ts-node-dev": "^2.0.0",
   "typescript": "^5.5.4",
   "vue": "^3.4.29",
+  "vue-markdown-render": "^2.2.1",
   "vue-router": "^4.4.0",
   "winston": "^3.14.2",
   "winston-daily-rotate-file": "^5.0.0"
